# python-poetry-template

./: .dockerignore  .gitignore  README.md  pyproject.toml
template/: __main__.py
